--- a/.jervis.yml
+++ b/.jervis.yml
@@ -1,5 +1,1 @@
-language: groovy
-#required to skip the travis 'install' step because we're using make.
-#http://docs.travis-ci.com/user/build-configuration/#install
-install: true
-script: make
+language: java
