--- a/.jervis.yml
+++ b/.jervis.yml
@@ -2,7 +2,7 @@ language: java
 script: ./gradlew clean check groovydoc assemble
 jenkins:
   collect:
-    archive: build/libs/*.jar
+    artifacts: build/libs/*.jar
     junit: build/test-results/**/*.xml
     html:
       path: build/docs/groovydoc
