--- a/.jervis.yml
+++ b/.jervis.yml
@@ -1,4 +1,9 @@
 language: java
+script: ./gradlew clean check groovydoc assemble
 jenkins:
   collect:
+    artifacts: build/libs/*.jar
     junit: build/test-results/**/*.xml
+    html:
+      path: build/docs/groovydoc
+      reportName: 'groovy-gradle-seed API docs'
