--- a/.jervis.yml
+++ b/.jervis.yml
@@ -4,6 +4,7 @@ env:
   - GROOVY_VERSION=2.6.0-alpha-4
 script: ./gradlew clean check groovydoc assemble
 jenkins:
+  pipeline_jenkinsfile: .ci/Jenkinsfile
   stash:
     - name: artifacts
       matrix_axis:
