--- a/.ci/Jenkinsfile
+++ b/.ci/Jenkinsfile
@@ -26,6 +26,8 @@ if(isTagBuild()) {
         unstash 'artifacts'
         unstash 'html'
         sh '.ci/create-dist.sh'
-        sh '.ci/upload-release.sh'
+        withCredentials([usernamePassword(credentialsId: 'clone-https', passwordVariable: 'GITHUB_TOKEN')]) {
+          sh '.ci/upload-release.sh'
+        }
     }
 }
